// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts reducer should call a fetch post error action 1`] = `
Object {
  "error": Object {
    "msg": "api error",
  },
  "from": 0,
  "isLoading": false,
  "posts": Array [],
  "to": 0,
}
`;

exports[`Posts reducer should call a fetch post success action 1`] = `
Object {
  "error": null,
  "from": 0,
  "isLoading": false,
  "posts": Array [
    Object {
      "title": "hello",
    },
  ],
  "to": 0,
}
`;

exports[`Posts reducer should call a move post down action 1`] = `
Object {
  "error": null,
  "from": 0,
  "isLoading": false,
  "posts": Array [
    Object {
      "title": "bendozy",
    },
    Object {
      "title": "hello",
    },
    Object {
      "title": "bendozy",
    },
  ],
  "to": 1,
}
`;

exports[`Posts reducer should call a move post down action 2`] = `
Object {
  "error": null,
  "from": 0,
  "isLoading": false,
  "posts": Array [
    Object {
      "title": "bendozy",
    },
    Object {
      "title": "hello",
    },
    Object {
      "title": "bendozy",
    },
  ],
  "to": 0,
}
`;

exports[`Posts reducer should call a move post up action 1`] = `
Object {
  "error": null,
  "from": 1,
  "isLoading": false,
  "posts": Array [
    Object {
      "title": "bendozy",
    },
    Object {
      "title": "hello",
    },
  ],
  "to": 0,
}
`;

exports[`Posts reducer should return the initial state 1`] = `
Object {
  "error": null,
  "from": 0,
  "isLoading": true,
  "posts": Array [],
  "to": 0,
}
`;
